# rust_player_learning

./: .gitignore  ARCHITECTURE.md  Cargo.toml  ONBOARDING.md  PLAYER_INTEGRATION.md  README.md  build.rs  test_android.ps1
.cargo/: config.toml
.github/workflows/: conformance.yml  publish-android.yml  publish-ios.yml
app/: Cargo.toml
app-android/: Cargo.toml  build.rs  build_rust.ps1
app-android/android/: .gitignore  README.md  gradle.properties  settings.gradle  settings.gradle.kts
app-android/android/app/: build.gradle  build.gradle.kts
app-android/android/app/debug/: output-metadata.json
app-android/android/app/src/main/: AndroidManifest.xml
app-android/android/app/src/main/java/cz/preclikos/rustplayer/: MainActivity.java
app-android/android/app/src/main/kotlin/cz/preclikos/rustplayer/: MainActivity.kt  NativeBridge.kt  PlayerBridge.kt  RustPlayer.kt
app-android/android/app/src/main/res/values/: strings.xml
app-android/android/gradle/: libs.versions.toml
app-android/android/rustplayer/: build.gradle.kts
app-android/android/rustplayer/src/main/kotlin/cz/preclikos/rustplayer/: NativeBridge.kt  PlayerBridge.kt  RustPlayer.kt  RustPlayerProvider.kt
app-android/src/: lib.rs
app-ios/: Cargo.toml
app-ios/ios/: build_sim.sh
app-ios/ios/RustPlayer/: Info.plist  main.m
app-ios/packaging/: .gitignore  Package.swift
app-ios/packaging/Sources/RustPlayer/: RustPlayer.swift
app-ios/packaging/include/: module.modulemap  rustplayer_ffi.h
app-ios/packaging/scripts/: build_xcframework.sh
app-ios/src/: lib.rs
app-shared/: Cargo.toml
app-shared/src/: bridge.rs  lib.rs
app/src/: main.rs  shader.wgsl
bridge/: Cargo.toml
bridge/src/: bridge.rs  lib.rs
docs/handoffs/: AAR_PRODUCT_CONSUMER_API.md  ABR_REBUILD_ORPHANED_DOWNLOADER.md  AUDIO_PASSTHROUGH_HANDOFF.md  AUDIO_PAUSE_WEDGE_AND_STARTUP_CONVOY.md  AUDIO_PCM_AAUDIO_STOLEN_GOOGLE_TV_STREAMER.md  CRASH_b030db8_AFR_SURFACE_UAF_AND_PT_LEAK.md  IOS_REQUEST_FILTER_HEADERS.md  OUTCOME.md  PLAYER_STOP_TEARDOWN.md  PREBUILT_DISTRIBUTION_AAR_XCFRAMEWORK.md  README.md  RESUME_SEEK_STILL_BROKEN.md  RESUME_START_POSITION.md  SUBTITLE_OVERSCAN_FIX.md  SUBTITLE_STYLE_HOST_API.md  UNIFIED_BRIDGE_FOR_PRODUCT_APPS.md
examples/desktop/: Cargo.toml
examples/desktop/src/: main.rs
platform/android/: Cargo.toml  build_rust.ps1
platform/android/android/app/src/main/kotlin/cz/preclikos/rustplayer/: MainActivity.kt
platform/android/android/rustplayer/: build.gradle.kts
platform/android/android/rustplayer/src/main/: AndroidManifest.xml
platform/android/android/rustplayer/src/main/kotlin/cz/preclikos/rustplayer/: NativeBridge.kt  PlayerBridge.kt  RustPlayer.kt
platform/android/src/: lib.rs
platform/ios/: Cargo.toml
platform/ios/ios/: build_sim.sh
platform/ios/ios/RustPlayer/: main.m
platform/ios/packaging/: Package.swift  README.md
platform/ios/packaging/Sources/RustPlayer/: RustPlayer.swift
platform/ios/packaging/include/: rustplayer_ffi.h
platform/ios/packaging/scripts/: build_xcframework.sh
platform/ios/src/: lib.rs
player/: Cargo.toml  FFMPEG_BUILD.md  HDR_TONEMAP.md  build.rs
player/c/: ffmpeg_log_shim.c
player/examples/: conformance.rs
player/scripts/: build-ffmpeg.sh
player/src/: abr.rs  capabilities.rs  crypto.rs  events.rs  ffmpeg_log.rs  hdr_tonemap.rs  manifest.rs  net.rs  networking.rs  parsers.rs  player.rs  renderers.rs  subtitle_style.rs  track_manager.rs  tracks.rs
player/src/decoders/: audiotoolbox.rs  ffmpeg_audio.rs  ffmpeg_hw.rs  mediacodec.rs  mediacodec_audio.rs  mod.rs  videotoolbox.rs
player/src/manifest/: manifest.rs
player/src/parsers/: hevc.rs  mp4.rs  vtt.rs
player/src/renderers/: audio.rs  audio_passthrough.rs  shader.wgsl  shader_hdr.wgsl  shader_hdr_detect.wgsl  subtitle.rs  test.rs  video.rs  video_offscreen.rs
player/src/renderers/audio/: audio_cpal.rs  audio_track_pcm.rs
player/src/renderers/subtitle/: rasterizer.rs
player/src/renderers/video/: video.rs  video_directx.rs  video_frame.rs  video_gles_egl.rs  video_macos.rs  video_mediacodec.rs  video_metal.rs  video_vaapi.rs  video_vulkan.rs
player/src/tracks/: audio.rs  segment.rs  text.rs  video.rs
player/src/utils/: time.rs
player/tests/: ffmpeg_smoke.rs  interceptor.rs  shader_validation.rs
scripts/conformance/: make-asset.ps1  rangesrv.py
