[workspace]
members = [
    "player",           # the engine (core library)
    "bridge",           # platform-agnostic bridge core (events, provider hooks, orchestration)
    "platform/android", # JNI cdylib → librustplayer.so (consumed by the :rustplayer AAR)
    "platform/ios",     # FFI staticlib → RustPlayerFFI.xcframework
    "examples/desktop", # winit desktop smoke test / reference consumer
]
exclude = ["vendor"]
resolver = "2"

# Temporary patch: ffmpeg-next 8.1.0 has match statements over rustified enums
# (AVCodecID, AVFrameSideDataType, AVPacketSideDataType) without wildcard arms.
# FFmpeg 8.1.1 backports added new variants (IAMF_*, DYNAMIC_HDR_SMPTE_2094_APP5,
# WEBP_ANIM, HEVC_CONF) which break compilation against system FFmpeg 8.1.1+.
# Vendored copy adds `_ =>` arms; remove once ffmpeg-next > 8.1.0 ships upstream.
#
# We're on 8.x (not 7.1) because ffmpeg-sys-next 7.1.x's bindgen doesn't
# understand LLVM 22 libclang and emits opaque struct shells with broken
# layout asserts. 8.1.x ships a bindgen that handles LLVM 22 cleanly.
[patch.crates-io]
ffmpeg-next = { path = "vendor/ffmpeg-next" }

# Optimize crypto crates even in dev builds. Without this, AES-CTR decryption
# of a 2 MB DASH segment takes ~4s in debug mode (~0.5 MB/s) — even with
# hardware AES intrinsics enabled — because the surrounding loop/cipher
# state code isn't inlined or vectorized. With opt-level=3 these crates hit
# >100 MB/s, so a segment decrypts in ~20ms instead of 4s.
[profile.dev.package.aes]
opt-level = 3
[profile.dev.package.ctr]
opt-level = 3
[profile.dev.package.cipher]
opt-level = 3
[profile.dev.package.crypto-common]
opt-level = 3
[profile.dev.package.cpufeatures]
opt-level = 3
# Also optimize the player crate: the per-sample decryption loop calls
# cipher.apply_keystream() many times per segment, and without inlining the
# loop overhead dominates even optimized AES. With opt-level=3 here the
# whole pipeline gets vectorized.
[profile.dev.package.player]
opt-level = 3
