[package]
name = "app-android"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

# Dependencies are Android-only so this crate is a no-op on desktop/iOS
# builds (cargo workspace still passes `cargo check` everywhere).
[target.'cfg(target_os = "android")'.dependencies]
player = { path = "../player" }
app-shared = { path = "../app-shared" }
android_logger = "0.14"
log = "0.4"
tokio = { version = "1.52", features = ["full"] }
# BridgeHost is an #[async_trait] impl (same macro the player's interceptor uses).
async-trait = "0.1"
# JNI entry points + ANativeWindow_fromSurface for the host-Surface embed path.
jni = "0.21"
ndk-sys = "0.6"
# In the embed model nothing initialises the global ndk_context for us (no
# NativeActivity, no android-activity crate); we have to seed JavaVM +
# Activity ourselves so transitive deps like cpal can resolve them.
ndk-context = "0.1"
