[package]
name = "app-shared"
version = "0.1.0"
edition = "2021"

# Cross-platform helper that wires the player crate up to the same
# encrypted test stream used by the desktop + Android shells. Keeps the
# track-selection / play-loop logic in one place so the two thin shells
# can't drift apart.

[dependencies]
player = { path = "../player" }
tokio = { version = "1.52", features = ["rt", "macros", "sync"] }
async-trait = "0.1"
log = "0.4"
