[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
player = { path = "../player" }
tokio = { version = "1.43.0", features = ["full"] }
winit = "0.30.9"
pollster = "0.4.0"
ffmpeg-next = {version = "7.1.0"}
bytemuck ={ version =  "1.13.1" }
cpal ={ version =  "0.15.3" }
env_logger = "0.11.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = ["Win32_System_Power"] }

[target.'cfg(linux)'.dependencies]
x11 = "2.20.0"
wayland-client = "0.31.8"
