[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
player = { path = "../player" }
tokio = { version = "1.43.0", features = ["full"] }
winit = "0.30.9"
pollster = "0.4.0"
ffmpeg-next = {version = "8.1.0"}
bytemuck ={ version =  "1.13.1" }
cpal ={ version =  "0.17" }
env_logger = "0.11.6"
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Power"] }

[target.'cfg(any(unix, linux))'.dependencies]
x11 = "2.20.0"
wayland-client = "0.31.8"
