[package]
name = "player"
version = "0.1.0"
edition = "2021"

[lib]
name = "player"
path = "src/player.rs"

[dependencies]
# TLS backend is target-specific (see [target.cfg.dependencies] below).
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "http2", "charset"] }
quick-xml = {version ="0.37.2", features = [ "serialize" ] }
serde = { version = "1.0", features = ["derive"] }
iso8601-duration = { version = "0.2" }
url = { version = "2.5.4" }
tokio = { version = "1.43.0", features = ["full"] }
re_mp4 = { version = "0.3.0" }
hex = { version = "0.4" }
aes = { version = "0.8" }
ctr = { version = "0.9" }
async-trait = "0.1"
arc-swap = "1.7"
bytes = "1"
rand = "0.8"
cpal ={ version =  "0.17" }
bytemuck ={ version =  "1.13.1" }
pollster = "0.4.0"
wgpu = { git = "https://github.com/Preclikos/wgpu.git" }
winit = "0.30.9"
ash = "0.38.0"
log = "0.4"
# Subtitle font rasterization. Pure-Rust, no system deps. Used by the
# wgpu-based subtitle overlay to bake cue text into RGBA bitmaps that
# get uploaded as textures and drawn over the video surface.
fontdue = "0.9"

# FFmpeg ships everywhere except iOS / Android — Win/Linux use it for
# both video + audio, macOS uses it for AUDIO only (VideoToolbox stays
# native for video). AudioToolbox's AAC decoder mis-behaves when fed
# access units packet-by-packet on macOS, so we let the proven
# ffmpeg AAC / AC-3 / EAC-3 decoders handle that side.
# ffmpeg-next 8.x ships with a newer bindgen that works with LLVM 22+.
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
ffmpeg-next = { version = "8.1.0"}
ffmpeg-sys-next = { version = "8.1.0"}

# Win/Linux: native-tls (system OpenSSL/Schannel). macOS prefers rustls
# so we don't drag native-tls + OpenSSL into the build.
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["default-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }

# Apple zero-copy interop, shared by macOS (FFmpeg VideoToolbox) and iOS
# (native VTDecompressionSession). Both pull a CVPixelBuffer through
# CVMetalTextureCache → MTLTextures → wgpu::Texture via
# wgpu_hal::metal::Device::texture_from_raw.
#
# Verze objc2 jsou pinnuté tak, aby přesně odpovídaly těm, které používá wgpu
# fork — jinak `Retained<ProtocolObject<dyn MTLTexture>>` co vyrobíme nesedne
# do signature `texture_from_raw`.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std"] }
objc2-metal = { version = "0.3.2", default-features = false, features = [
    "std",
    "MTLDevice",
    "MTLResource",
    "MTLTexture",
    "MTLPixelFormat",
] }

# Android-only: enable winit's NativeActivity backend, MediaCodec via the
# ndk crate, JNI binding for future Java interop, and rustls so reqwest
# doesn't need a cross-compiled OpenSSL.
[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.9", features = ["android-native-activity"] }
ndk = { version = "0.9", features = ["media", "api-level-29"] }
ndk-sys = "0.6"
jni = "0.21"
libc = "0.2"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
glow = "0.17"

# iOS: rustls-tls so reqwest doesn't try to use native-tls (which has no
# default feature gate on iOS and silently links to nothing — every HTTPS
# call then fails with "error sending request" at the TLS layer). The
# audio/video decoder path is fully native (VideoToolbox + AudioToolbox),
# so we don't pull in ffmpeg-next here.
[target.'cfg(target_os = "ios")'.dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [ "Win32_System_Com", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_Foundation", "Wdk_Foundation", "Win32_System_LibraryLoader",
             "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D12",
             "Win32_Security", "Win32_Security_Authorization", "Win32_System_WindowsProgramming", "Win32_System_Threading", "Win32_System_Registry",
             "Win32_Storage_Packaging_Appx", "Win32_Storage_FileSystem" ] }

